# openbgpd

./: .gitignore  CNAME  Makefile  Makefile.inc  README.md  README.source  changelog  configure.ac  control  copyright  custom-watch  defines.h  includes.h  index.html  openbgpd.install  openbgpd_4.6-3.dsc  openbgpd_4.6.orig.tar.gz.delta  openbgpd_4.6.orig.tar.gz.id  rules  watch
bgpctl/: Makefile  Makefile.am  bgpctl.8  bgpctl.c  irr_output.c  irr_parser.c  irr_prefix.c  irrfilter.c  irrfilter.h  parser.c  parser.h
bgpctl/CVS/: Entries
bgpd/: Makefile  Makefile.am  bgpd.8  bgpd.c  bgpd.conf.5  bgpd.h  carp.c  config.c  control.c  kroute.c  log.c  log.h  parse.y  pfkey.c  pftable.c  printconf.c  rde.c  rde.h  rde_attr.c  rde_decide.c  rde_filter.c  rde_prefix.c  rde_rib.c  rde_update.c  session.c  session.h  timer.c  util.c
bgpd/CVS/: Entries  Root  Tag
ca_d/: Makefile.am  autogen.sh  configure.ac
ca_d/doc/: PACKAGES.TXT
ca_d/includes/: pbgp.h  pbgp_accumulator.h  pbgp_actions.h  pbgp_epoch.h  pbgp_ibe.h  pbgp_rsa.h  pbgp_schema.h  pbgp_setup.h  pbgp_store.h  pbgp_witness.h
ca_d/src/: Makefile.am  Makefile.in  pbgp_accumulator.c  pbgp_actions.c  pbgp_epoch.c  pbgp_ibe.c  pbgp_rsa.c  pbgp_setup.c  pbgp_store.c  pbgp_witness.c
ca_d/tests/: Makefile.am  Makefile.in  README  check_accwitt.c  check_epoch.c  check_ibe.c  check_main.c  check_pbgp.h  check_rsa.c  check_setup.c  check_store.c  check_void.c
debian/: README.source  changelog  openbgpd.init  openbgpd.manpages  openbgpd.postinst  rules
debian/patches/: 0002-Do-not-break-strict-aliasing-rules-in-addr2sa.patch  0003-Do-not-break-strict-aliasing-in-imsg_read.patch  0005-Do-not-discard-qualifiers-from-pointer-in-hash32_str.patch  0006-Fix-conditional-FreeBSD-include-for-GNU-kFreeBSD.patch  0006-Remove-unused-but-set-variables.patch  0007-Fix-conditional-FreeBSD-include-for-GNU-kFreeBSD.patch  0007-Make-Makefiles-work-out-of-a-FreeBSD-ports-tree.patch  0007-Use-portable-printf-format-strings.patch  0009-Remove-Wshadow-from-compile-flags.patch  0010-Add-Werror-to-CFLAGS.patch  0010-Add-necessary-ifdef-s-and-define-s-for-glibc-and-lib.patch  0011-Add-necessary-ifdef-s-and-define-s-for-glibc-and-lib.patch  0011-Write-and-verify-a-pidfile-upon-startup.patch  0012-Write-and-verify-a-pidfile-upon-startup.patch  0013-Use-bgpd-instead-of-_bgpd-for-system-username.patch  0015-Adjust-the-manpage-for-Debian-systems.patch  series
files/: bgpd  bgpd-functions  bgpd.conf  bgpd_conf_01.txt  bgpd_conf_02.txt
openbsd-compat/: Makefile.am  arc4random.c  bsd-accept4.c  bsd-misc.c  fmt_scaled.c  getentropy_linux.c  hash.h  imsg-buffer.c  imsg.c  inet_net_pton.c  linkaddr.c  openbsd-compat.h  pfkey_compat.c  siphash.c
patches/: 0001-Import-FreeBSD-port-patches-4.9.20110612.patch  0004-Do-not-break-strict-aliasing-rules-in-msgbuf_write.patch  0008-Fix-conditional-FreeBSD-include-for-GNU-kFreeBSD.patch  0012-Add-necessary-ifdef-s-and-define-s-for-glibc-and-lib.patch  series
pbgpd_d/bgpctl/: Makefile
pbgpd_d/bgpd/: Makefile  bgpd.c  imsg.h  kroute.c  parse.c  pbgpd.c  pbgpd.h  rde.c  rde.h  rde_update.c  session.c  session.h
src/: antigen.sh  config.h.in  configure.ac  defines.h  includes.h
src/bgpctl/: irr_asset.c  irr_output.c  irrfilter.h  mrtparser.c
src/bgpd/: Makefile.am  bgpd.h  config.c  parse.c  parse.y  pfkey.c  rde.h  rde_attr.c  rde_filter.c  session.c  session.h  timer.c
src/openbsd-compat/: Makefile.am  fgetln.c  imsg.h  inet_net_pton.c  linux-vis.h  openbsd-compat.h  sha512.h  sha512c.c  siphash.h
